# nilearn-stubs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  generate_nilearn_stubs.py  pyproject.toml  tox.ini
maint_tools/: apply_types.py
nilearn/: masking.pyi  signal.pyi
nilearn-stubs/: __init__.py  _utils.pyi  _version.py  masking.pyi  signal.pyi  typing.py
nilearn-stubs/_utils/: bids.pyi  cache_mixin.pyi  class_inspect.pyi  docs.pyi  estimator_checks.pyi  exceptions.pyi  extmath.pyi  glm.pyi  helpers.pyi  html_document.pyi  logger.pyi  masker_validation.pyi  ndimage.pyi  niimg.pyi  niimg_conversions.pyi  numpy_conversions.pyi  param_validation.pyi  path_finding.pyi  segmentation.pyi  testing.pyi
nilearn-stubs/connectome/: connectivity_matrices.pyi  group_sparse_cov.pyi
nilearn-stubs/datasets/: __init__.py  atlas.pyi  func.pyi  neurovault.pyi  struct.pyi  utils.pyi
nilearn-stubs/decoding/: decoder.pyi  searchlight.pyi  space_net.pyi
nilearn-stubs/decomposition/: _base.pyi  _multi_pca.pyi  canica.pyi  dict_learning.pyi
nilearn-stubs/glm/: _base.pyi  contrasts.pyi  model.pyi  regression.pyi  thresholding.pyi
nilearn-stubs/glm/first_level/: design_matrix.pyi  first_level.pyi  hemodynamic_models.pyi
nilearn-stubs/glm/second_level/: second_level.pyi
nilearn-stubs/image/: __init__.py  image.pyi  resampling.pyi
nilearn-stubs/interfaces/: __init__.py  fsl.pyi
nilearn-stubs/interfaces/bids/: __init__.py  glm.pyi  query.pyi
nilearn-stubs/interfaces/fmriprep/: load_confounds.pyi  load_confounds_strategy.pyi
nilearn-stubs/maskers/: __init__.py  base_masker.pyi  multi_nifti_labels_masker.pyi  multi_nifti_maps_masker.pyi  multi_nifti_masker.pyi  nifti_labels_masker.pyi  nifti_maps_masker.pyi  nifti_masker.pyi  nifti_spheres_masker.pyi  surface_labels_masker.pyi  surface_maps_masker.pyi  surface_masker.pyi
nilearn-stubs/mass_univariate/: __init__.py  permuted_least_squares.pyi
nilearn-stubs/plotting/: __init__.py  cm.pyi  find_cuts.pyi  html_connectome.pyi  html_document.pyi  html_stat_map.pyi  html_surface.pyi  img_plotting.pyi  matrix_plotting.pyi  surf_plotting.pyi
nilearn-stubs/plotting/displays/: __init__.py  _axes.pyi  _figures.pyi  _projectors.pyi  _slicers.pyi
nilearn-stubs/regions/: __init__.py  hierarchical_kmeans_clustering.pyi  parcellations.pyi  region_extractor.pyi  rena_clustering.pyi  signal_extraction.pyi
nilearn-stubs/reporting/: __init__.py  get_clusters_table.pyi  glm_reporter.pyi  html_report.pyi
nilearn-stubs/surface/: __init__.py  surface.pyi
nilearn/interfaces/: fsl.pyi
nilearn/interfaces/bids/: glm.pyi
nilearn/interfaces/fmriprep/: __init__.py  load_confounds.pyi  load_confounds_strategy.pyi
nilearn_stubs/: _version.py
nilearn_stubs/glm/: __init__.py  contrasts.pyi  model.pyi  regression.pyi
nilearn_stubs/glm/first_level/: __init__.py  design_matrix.pyi  first_level.pyi
nilearn_stubs/glm/second_level/: __init__.py
nilearn_stubs/interfaces/: __init__.py
nilearn_stubs/interfaces/bids/: __init__.py  glm.pyi  query.pyi
nilearn_stubs/interfaces/fmriprep/: __init__.py
nilearn_stubs/surface/: __init__.py  surface.pyi
